--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/AdvWorldInteraction/Maps/L_Menu.L_Menu
-GameDefaultMap=/Game/AdvWorldInteraction/Maps/L_Menu.L_Menu
+EditorStartupMap=/Game/AdvWorldInteraction/Maps/L_MainLevel.L_MainLevel
+GameDefaultMap=/Game/AdvWorldInteraction/Maps/L_MainLevel.L_MainLevel
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 bSupportsPortraitOrientation=False
@@ -56,5 +56,4 @@ InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
-
 
